[package]
name = "zcashrpc-api"
version = "0.1.0"
authors = ["zancas <zancas@zingolabs.com>", "Gy <gygaxis@zingolabs.com">]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "*"
serde = { version = "*", features = ["derive"] }
